[package]
name = "s_curve"
version = "0.1.5"
authors = ["Marco Boneberger <m.boneberger@tu-bs.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marcbone/s_curve"
description = "Package to generate S-Curve trajectories for robotics and similar applications "
categories = ["science::robotics", "mathematics"]
keywords = ["s-curve", "trajectory", "motion", "curve", "scurve"]
readme = "README.md"
documentation = "https://docs.rs/s_curve/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "s_curve"
path = "src/lib.rs"

[[example]]
name = "plot"
path = "examples/plot.rs"

[dependencies]
[dev-dependencies]
gnuplot = "0.0.37"